# snake-ai

./: .gitignore  ORGANIZATION_SUMMARY.md  README.md  USER_DATA_GUIDE.md  check_dependencies.py  check_dependencies_full.py  cleanup_project.py  dependency_scan_config.ini  pyproject.toml  requirements-security.txt  requirements.txt  scan_dependencies.bat  scan_dependencies.ps1  setup_scheduled_scan.bat  show_structure.py  test_project_system.py  test_simplified_projects.py
config/: config.yaml  security_scan.ini
config/strategies/: advanced_config.yaml  exploration_config.yaml  food_seeking_config.yaml
docs/: CONFIG.md  CONFIG_SYSTEM.md  CURRICULUM.md  FIXED_DOUBLE_ITERATION_PROMPT.md  MOVE_COST_IMPLEMENTATION.md  NO_SCORE_PENALTY.md  PROJECT_CONFIG_STORAGE.md  SECURITY_SCANNING.md  STRATEGY_SELECTION_GUIDE.md  TRAINING_FRAMEWORK.md
examples/: example_custom_strategy.py  sample_custom_strategy.py
notebooks/: README.md  hyperparameter_experiments.ipynb  model_evaluation.ipynb  training_analysis.ipynb
requirements/: base.txt  dev.txt  security.txt
src/: __main__.py  menu.py  model_container.py  project_manager.py  snake_ai.py  snake_game.py  snake_game_renderer.py  snake_gym_env.py  strategy_analytics.py  tensorboard_logger.py  training_framework.py  utils.py  view_training_plot.py  wandb_logger.py
src/strategies/: README.md  __init__.py  advanced_strategy.py  food_seeking_strategy.py  survival_strategy.py
src/strategies/configs/: advanced_config.yaml  efficiency_config.yaml  survival_config.yaml
tools/: README.md  security_tools.py
tools/security/: dependency_scanner.py
